MicroData: Compilation error while building Webkit with --microdata. https://bugs.webkit.org/show_bug.cgi?id=76703

Patch by Arko Saha <nghq36@motorola.com> on 2012-01-23
Reviewed by Hajime Morita.

* dom/MicroDataItemList.cpp:
(WebCore::MicroDataItemList::MicroDataItemList):
(WebCore::MicroDataItemList::~MicroDataItemList):
* dom/MicroDataItemList.h:
* dom/NodeRareData.h:
(WebCore::NodeRareData::properties):
* html/HTMLPropertiesCollection.cpp:
(WebCore::HTMLPropertiesCollection::create):
(WebCore::HTMLPropertiesCollection::HTMLPropertiesCollection):
* html/HTMLPropertiesCollection.h:

Canonical link: https://commits.webkit.org/93689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105655 268f45cc-cd09-0410-ab3c-d52691b4dbfc